# tmp-parcels-broken-rattler

./: .gitignore  .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml  recipe.yaml
.github/ISSUE_TEMPLATE/: 01_feature.yml  02_bug.yaml
.github/ci/: policy.yaml  recipe.yaml
.github/workflows/: additional.yml  ci.yml  pypi-release.yml
docs/: Makefile  conf.py  index.md
docs/community/: index.md
docs/development/: docsguide.md  index.md  maintainer.md  policies.md  posting-issues.md  unstructured_grid_search.md
docs/getting_started/: explanation_concepts.md  index.md  installation.md  tutorial_output.ipynb  tutorial_quickstart.md
docs/user_guide/: additional_examples.md  index.md  v4-migration.md
docs/user_guide/examples/: explanation_grids.md  explanation_interpolation.md  (+16 more)
docs/v4/: TODO.md  index.md  installation.md
src/parcels/: __init__.py  _compat.py  _python.py  _reprs.py  _typing.py  convert.py
tests/: test_advection.py  test_convert.py  test_diffusion.py  test_fieldset.py  test_index_search.py  test_interpolation.py  test_particle.py  test_particlefile.py  test_particleset.py  test_particleset_execute.py  test_particlesetview.py  test_python.py  test_sigmagrids.py  test_typing.py  test_uxarray_fieldset.py  test_uxgrid.py  test_xgrid.py  utils.py
tests-v3/: test_advection.py  test_fieldset.py  test_fieldset_sampling.py  test_kernel_language.py
tests-v3/tools/: test_warnings.py
tests/strategies/: sgrid.py
tests/utils/: test_sgrid.py  test_time.py  test_unstructured.py
tools/: get-parcels-alpha-version.py  numpydoc-public-api.py
(+34 files in other folders)
