[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parcels"
description = "Framework for Lagrangian tracking of virtual ocean particles in the petascale age."
readme = "README.md"
dynamic = ["version"]
authors = [{ name = "Parcels team" }]
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "cftime >=1.6.3",
  "numpy >=2.1.0",
  "dask >=2024.5.1",
  "netCDF4 >=1.7.2",
  "zarr >=2.15.0,!=2.18.0,<3",
  "tqdm >=4.50.0",
  "xarray >=2024.5.0",
  "uxarray >=2025.3.0",
  "pooch >=1.8.0",
  "xgcm >=0.9.0",
  "cf_xarray >=0.8.6",
]

[project.urls]
homepage = "https://parcels-code.org/"
repository = "https://github.com/Parcels-code/parcels"
Tracker = "https://github.com/Parcels-code/parcels/issues"


[tool.setuptools]
package-dir = { "" = "src" }
packages = ["parcels"]

[tool.setuptools_scm]
write_to = "src/parcels/_version_setup.py"
local_scheme = "no-local-version"
